# damascene-volume

./: .SRCINFO  .gitignore  Cargo.toml  PKGBUILD  README.md  damascene-volume.desktop
.github/workflows/: ci.yml
docs/: PAVUCONTROL_COVERAGE.md
src/: app.rs  host.rs  levels.rs  lib.rs  main.rs  model.rs  util.rs
src/backend/: mod.rs  pipewire_native.rs
