[package]
name = "damascene-volume"
version = "0.3.1"
edition = "2024"
license = "MIT OR Apache-2.0"
default-run = "damascene-volume"

[dependencies]
damascene-core = "0.4.1"
damascene-winit-wgpu = "0.4.1"
anyhow = "1"
pipewire = "0.9.2"
rustfft = "6.2"
rustix = { version = "1.1", features = ["process"] }
serde = { version = "1", features = ["derive"] }
