[package]
name = "damascene-volume"
version = "0.3.2"
edition = "2024"
license = "MIT OR Apache-2.0"
default-run = "damascene-volume"

[dependencies]
damascene-core = "0.5.0"
damascene-winit-wgpu = "0.5.0"
anyhow = "1"
pipewire = "0.9.2"
rustfft = "6.4"
rustix = { version = "1.1", features = ["process"] }
serde = { version = "1", features = ["derive"] }
